<?xml version="1.0"?>
<package format="2">
  <name>limo_controller</name>
  <version>0.1.0</version>
  <description>TCC Project for AgileX LIMO autonomous navigation</description>
  <maintainer email="bruno@example.com">Bruno</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>